--- a/rest-demo/pom.xml
+++ b/rest-demo/pom.xml
@@ -5,6 +5,10 @@
   <artifactId>rest-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>javax</groupId>
